<resources>
    <string name="app_name">RehabilitationTool</string>
    <string name="i">I</string>
    <string name="want">اريد</string>
    <string name="notWant">لا اريد</string>
    <string name="eat">اكل</string>
    <string name="drink">اشرب</string>
    <string name="wear">البس</string>
    <string name="no">لا</string>
    <string name="yes">نعم</string>
    <string name="go">اذهب</string>
    <string name="remove">TODO</string>
    <string name="I">أنا</string>
    <string name="egg">egg</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="rice">rice</string>
    <string name="button4">Button</string>
    <string name="potato">potato</string>
    <string name="title_activity_clothes">CLOTHES</string>
    <string name="trousers">trousers</string>
    <string name="skirt">skirt</string>
    <string name="shirt">Shirt</string>
    <string name="tshirt">Tshirt</string>
    <string name="suit">suit</string>
    <string name="dress">dress</string>
    <string name="bathroom">bathroom</string>
    <string name="bedroom">bedroom</string>
    <string name="livingroom">livingroom</string>
    <string name="university">university</string>
    <string name="supermarket">supermarket</string>
    <string name="school">school</string>
    <string name="milk">milk</string>
    <string name="water">water</string>
    <string name="juice">juice</string>
    <string name="name">Canda</string>
    <string name="image_view">TODO</string>
    <string name="time">الوقت</string>
    <string name="eattt">أكل</string>
    <string name="wearr">ألبس</string>
    <string name="actions">الأفعال</string>
    <string name="family">العائلة</string>
    <string name="goo">أمشي</string>
    <string name="transportation">المواصلات</string>
    <string name="tools">أدوات</string>
    <string name="relations">اتجاهات</string>
    <string name="createcard">انشاء بطاقة</string>
    <string name="iwantt">أنا عايز</string>
    <string name="yess">نعم</string>
    <string name="actionss">الأفعال</string>
    <string name="noo">لا</string>
    <string name="drinkk">أشرب</string>
    <string name="eatt">أكل</string>
    <string name="waerr">ألبس</string>
    <string name="timee">الوقت</string>
    <string name="toolss">الأدوات</string>
    <string name="relationss">الاتجاهات</string>
    <string name="transportationn">المواصلات</string>
    <string name="familyy">العائلة</string>
    <string name="notwantt">notwantt</string>
    <string name="notwanttt">أنا مش عايز</string>
    <string name="night">Button</string>
    <string name="morning">Button</string>
    <string name="night2">الليل</string>
    <string name="morning2">الصبح</string>
    <string name="lettuce2">خس</string>
    <string name="carrot2">جزر</string>
    <string name="cucumber2">خيار</string>
    <string name="tomato2">طماطم</string>
    <string name="potato2">بطاطس</string>
    <string name="plane2">طيارة</string>
    <string name="ship2">سفينة</string>
    <string name="train2">قطار</string>
    <string name="car2">عربية</string>
    <string name="taxi2">تاكسي</string>
    <string name="metro2">مترو</string>
    <string name="autobus2">أوتوبيس</string>
    <string name="livingroom2">الصالة</string>
    <string name="bedroom2">اوضة النوم</string>
    <string name="supermarket2">السوبرماركت</string>
    <string name="company2">الشركة</string>
    <string name="university2">الجامعة</string>
    <string name="school2">المدرسة</string>
    <string name="bathroom2">الحمام</string>
    <string name="kitchen2">المطبخ</string>
    <string name="fork2">شوكة</string>
    <string name="spoon2">ملعقة</string>
    <string name="cup2">كوباية</string>
    <string name="dish2">طبق</string>
    <string name="table2">ترابيزة</string>
    <string name="chair2">كرسي</string>
    <string name="scussors2">مقص</string>
    <string name="knife2">سكينة</string>
    <string name="tv2">تليفزيون</string>
    <string name="notebook22">كراسة</string>
    <string name="toys2">ألعاب</string>
    <string name="ball2">كورة</string>
    <string name="computer2">كمبيوتر</string>
    <string name="pen2">قلم</string>
    <string name="glasses2">نضارة</string>
    <string name="bike2">عجلة</string>
    <string name="milk2">لبن</string>
    <string name="water2">ماء</string>
    <string name="juice2">عصير</string>
    <string name="orange2">برتقال</string>
    <string name="grape2">عنب</string>
    <string name="pear2">كمثرى</string>
    <string name="guava2">جوافة</string>
    <string name="Strawberries2">فراولة</string>
    <string name="mango2">مانجو</string>
    <string name="banana2">موز</string>
    <string name="peach2">خوخ</string>
    <string name="watermelon2">بطيخ</string>
    <string name="apple2">تفاح</string>
    <string name="soup2">شوربة</string>
    <string name="jam2">مربى</string>
    <string name="pizza2">بيتزا</string>
    <string name="icecream2">أيس كريم</string>
    <string name="bread2">عيش</string>
    <string name="fruit2">فاكهة</string>
    <string name="Chocolate2">شيكولاتة</string>
    <string name="meat2">لحمة</string>
    <string name="honey2">عسل</string>
    <string name="popcorn2">فشار</string>
    <string name="Yogurt2">زبادى</string>
    <string name="chickens2">فراخ</string>
    <string name="cheese2">جبنة</string>
    <string name="sandwich2">سندوتش</string>
    <string name="salad2">سلطة</string>
    <string name="biscuit2">بسكويت</string>
    <string name="fish2">سمك</string>
    <string name="rice2">رز</string>
    <string name="egg2">بيض</string>
    <string name="vegatable2">خضار</string>
    <string name="pajama2">بيجامة</string>
    <string name="blouse2">بلوزة</string>
    <string name="trousers2">بنطلون</string>
    <string name="jacket2">جاكيت</string>
    <string name="dress2">فستان</string>
    <string name="sock2">شراب</string>
    <string name="tshirt2">تيشيرت</string>
    <string name="shoes2">جزمة</string>
    <string name="skrit2">جيبة</string>
    <string name="suit2">بدلة</string>
    <string name="sister2">أختى</string>
    <string name="brother2">أخويا</string>
    <string name="father2">بابا</string>
    <string name="grandfather2">جدو</string>
    <string name="grandmother2">جدتى</string>
    <string name="mother2">ماما</string>
    <string name="around2">حول</string>
    <string name="beside2">بجانب</string>
    <string name="below2">تحت</string>
    <string name="above2">فوق</string>
    <string name="left2">شمال</string>
    <string name="right2">يمين</string>
    <string name="inside2">داخل</string>
    <string name="between2">بين</string>
    <string name="dance2">أرقص</string>
    <string name="ride2">أركب</string>
    <string name="sleep2">أنام</string>
    <string name="sing2">أغنى</string>
    <string name="close2">أقفل</string>
    <string name="swim2">أعوم</string>
    <string name="think2">أفكر</string>
    <string name="hop2">أقفز</string>
    <string name="read2">أقرأ</string>
    <string name="throw2">أرمى</string>
    <string name="watch2">اشاهد</string>
    <string name="smile2">ابتسم</string>
    <string name="climb2">اتسلق</string>
    <string name="speak2">اتكلم</string>
    <string name="run2">أجرى</string>
    <string name="gooo">اروح</string>
</resources>
