<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FRUIT">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="368dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="300dp"
                    android:layout_height="150dp" />

                <Button
                    android:id="@+id/playall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/ic_media_play" />
            </LinearLayout>

            <Button
                android:id="@+id/orange"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/orange"
                app:layout_constraintStart_toEndOf="@+id/watermelon"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <Button
                android:id="@+id/watermelon"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/watermelon"
                app:layout_constraintStart_toEndOf="@+id/apple"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <Button
                android:id="@+id/apple"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/apple"
                app:layout_constraintStart_toEndOf="@+id/guava"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <Button
                android:id="@+id/guava"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/guava"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/orange2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/orange2"
                app:layout_constraintStart_toEndOf="@+id/watermelon2"
                app:layout_constraintTop_toBottomOf="@+id/orange" />

            <TextView
                android:id="@+id/watermelon2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/watermelon2"
                app:layout_constraintStart_toEndOf="@+id/apple2"
                app:layout_constraintTop_toBottomOf="@+id/watermelon" />

            <TextView
                android:id="@+id/apple2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/apple2"
                app:layout_constraintStart_toEndOf="@+id/guava2"
                app:layout_constraintTop_toBottomOf="@+id/apple" />

            <TextView
                android:id="@+id/guava2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="10dp"
                android:text="@string/guava2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guava" />

            <Button
                android:id="@+id/peach"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/peach"
                app:layout_constraintStart_toEndOf="@+id/grape"
                app:layout_constraintTop_toBottomOf="@+id/orange2" />

            <Button
                android:id="@+id/grape"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/grapes"
                app:layout_constraintStart_toEndOf="@+id/Strawberries"
                app:layout_constraintTop_toBottomOf="@+id/watermelon2" />

            <Button
                android:id="@+id/Strawberries"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/strawberry"
                app:layout_constraintStart_toEndOf="@+id/pear"
                app:layout_constraintTop_toBottomOf="@+id/apple2" />

            <Button
                android:id="@+id/pear"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/pear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guava2" />

            <TextView
                android:id="@+id/peach2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/peach2"
                app:layout_constraintStart_toEndOf="@+id/grape2"
                app:layout_constraintTop_toBottomOf="@+id/peach" />

            <TextView
                android:id="@+id/grape2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/grape2"
                app:layout_constraintStart_toEndOf="@+id/Strawberries2"
                app:layout_constraintTop_toBottomOf="@+id/grape" />

            <TextView
                android:id="@+id/Strawberries2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/Strawberries2"
                app:layout_constraintStart_toEndOf="@+id/pear2"
                app:layout_constraintTop_toBottomOf="@+id/Strawberries" />

            <TextView
                android:id="@+id/pear2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="10dp"
                android:text="@string/pear2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pear" />

            <Button
                android:id="@+id/mango"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/mango"
                app:layout_constraintStart_toEndOf="@+id/banana"
                app:layout_constraintTop_toBottomOf="@+id/peach2" />

            <Button
                android:id="@+id/banana"
                android:layout_width="60dp"
                android:layout_height="120dp"
                android:layout_marginStart="196dp"
                android:layout_marginLeft="196dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/banana"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/grape2" />

            <TextView
                android:id="@+id/banana2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="196dp"
                android:layout_marginLeft="196dp"
                android:layout_marginTop="10dp"
                android:text="@string/banana2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banana" />

            <TextView
                android:id="@+id/mango2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/mango2"
                app:layout_constraintStart_toEndOf="@+id/banana2"
                app:layout_constraintTop_toBottomOf="@+id/mango" />

            <Button
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="31dp"
                android:layout_marginRight="31dp"
                android:background="@android:drawable/ic_menu_revert"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mango2" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>